# DeepC

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/deepc/: data_processing.h  layers.h  matrix.h  models.h  optimizers.h
includes/: DeepC.h  data_processing.h  deepC.h  layers.h  losses.h  matrix.h  models.h  optimizers.h
src/: CMakeLists.txt  data_processing.c  deepC.c  deepc.c  layers.c  losses.c  matrix.c  models.c  optimizers.c
test/: CMakeLists.txt  test.c
